FunctionalMatch/language/MatchingLanguageParser.py
# Generated from MatchingLanguage.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MatchingLanguageParser ( Parser ):

    grammarFileName = "MatchingLanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "':'", "'import'", "'shallow'", 
                     "'deep'", "'as'", "'to'", "'var'", "'match'", "'nested'", 
                     "'where'", "'extend-with'", "'replace'", "'rewrite'", 
                     "'with'", "'in-module'", "'call'", "'&&'", "'||'", 
                     "<INVALID>", "<INVALID>", "'<'", "'>'", "'\\u2192'", 
                     "'('", "')'", "'\\u2260'", "'!'", "'='", "'\\u2208'", 
                     "'\\u2205'", "'jsonpath'", "'python'", "<INVALID>", 
                     "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IMPORT", "SHALLOW", "DEEP", "AS", "TO", "VAR", "MATCHING", 
                      "NESTED", "WHERE", "EXTEND", "REPLACE", "REWRITE", 
                      "WITH", "OVERMODULE", "CALL", "AND", "OR", "LEQ", 
                      "GEQ", "LT", "GT", "IMPL", "LPAR", "RPAR", "NEQ", 
                      "NOT", "EQ", "ISIN", "EMPTY", "JSONPATH", "PYTHON", 
                      "ALPHANAME", "IGNORE", "STRING", "SPACE", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_language = 0
    RULE_import_statement = 1
    RULE_rule = 2
    RULE_match_multiobj = 3
    RULE_prop = 4
    RULE_extension = 5
    RULE_object = 6
    RULE_jpath = 7
    RULE_variable = 8
    RULE_rewrite_list = 9
    RULE_funarg = 10
    RULE_replacement = 11
    RULE_rewrite = 12
    RULE_as = 13
    RULE_repl = 14

    ruleNames =  [ "language", "import_statement", "rule", "match_multiobj", 
                   "prop", "extension", "object", "jpath", "variable", "rewrite_list", 
                   "funarg", "replacement", "rewrite", "as", "repl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    IMPORT=4
    SHALLOW=5
    DEEP=6
    AS=7
    TO=8
    VAR=9
    MATCHING=10
    NESTED=11
    WHERE=12
    EXTEND=13
    REPLACE=14
    REWRITE=15
    WITH=16
    OVERMODULE=17
    CALL=18
    AND=19
    OR=20
    LEQ=21
    GEQ=22
    LT=23
    GT=24
    IMPL=25
    LPAR=26
    RPAR=27
    NEQ=28
    NOT=29
    EQ=30
    ISIN=31
    EMPTY=32
    JSONPATH=33
    PYTHON=34
    ALPHANAME=35
    IGNORE=36
    STRING=37
    SPACE=38
    COMMENT=39
    LINE_COMMENT=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LanguageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.Import_statementContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.Import_statementContext,i)


        def rule_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.RuleContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.RuleContext,i)


        def getRuleIndex(self):
            return MatchingLanguageParser.RULE_language

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguage" ):
                listener.enterLanguage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguage" ):
                listener.exitLanguage(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLanguage" ):
                return visitor.visitLanguage(self)
            else:
                return visitor.visitChildren(self)




    def language(self):

        localctx = MatchingLanguageParser.LanguageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_language)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 30
                self.import_statement()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.rule_()
                self.state = 37
                self.match(MatchingLanguageParser.T__0)
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10 or _la==11):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MatchingLanguageParser.RULE_import_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Function_importContext(Import_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.Import_statementContext
            super().__init__(parser)
            self.fun = None # Token
            self.module = None # Token
            self.copyFrom(ctx)

        def IMPORT(self):
            return self.getToken(MatchingLanguageParser.IMPORT, 0)
        def OVERMODULE(self):
            return self.getToken(MatchingLanguageParser.OVERMODULE, 0)
        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(MatchingLanguageParser.STRING)
            else:
                return self.getToken(MatchingLanguageParser.STRING, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_import" ):
                listener.enterFunction_import(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_import" ):
                listener.exitFunction_import(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_import" ):
                return visitor.visitFunction_import(self)
            else:
                return visitor.visitChildren(self)


    class Class_importContext(Import_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.Import_statementContext
            super().__init__(parser)
            self.module = None # Token
            self.copyFrom(ctx)

        def IMPORT(self):
            return self.getToken(MatchingLanguageParser.IMPORT, 0)
        def ALPHANAME(self):
            return self.getToken(MatchingLanguageParser.ALPHANAME, 0)
        def OVERMODULE(self):
            return self.getToken(MatchingLanguageParser.OVERMODULE, 0)
        def STRING(self):
            return self.getToken(MatchingLanguageParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_import" ):
                listener.enterClass_import(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_import" ):
                listener.exitClass_import(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_import" ):
                return visitor.visitClass_import(self)
            else:
                return visitor.visitChildren(self)



    def import_statement(self):

        localctx = MatchingLanguageParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = MatchingLanguageParser.Function_importContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.match(MatchingLanguageParser.IMPORT)
                self.state = 44
                localctx.fun = self.match(MatchingLanguageParser.STRING)
                self.state = 45
                self.match(MatchingLanguageParser.OVERMODULE)
                self.state = 46
                localctx.module = self.match(MatchingLanguageParser.STRING)
                pass

            elif la_ == 2:
                localctx = MatchingLanguageParser.Class_importContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(MatchingLanguageParser.IMPORT)
                self.state = 48
                self.match(MatchingLanguageParser.ALPHANAME)
                self.state = 49
                self.match(MatchingLanguageParser.OVERMODULE)
                self.state = 50
                localctx.module = self.match(MatchingLanguageParser.STRING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.query = None # Match_multiobjContext
            self.rewriting = None # ObjectContext

        def MATCHING(self):
            return self.getToken(MatchingLanguageParser.MATCHING, 0)

        def AS(self):
            return self.getToken(MatchingLanguageParser.AS, 0)

        def match_multiobj(self):
            return self.getTypedRuleContext(MatchingLanguageParser.Match_multiobjContext,0)


        def variable(self):
            return self.getTypedRuleContext(MatchingLanguageParser.VariableContext,0)


        def jpath(self):
            return self.getTypedRuleContext(MatchingLanguageParser.JpathContext,0)


        def rewrite_list(self):
            return self.getTypedRuleContext(MatchingLanguageParser.Rewrite_listContext,0)


        def NESTED(self):
            return self.getToken(MatchingLanguageParser.NESTED, 0)

        def REPLACE(self):
            return self.getToken(MatchingLanguageParser.REPLACE, 0)

        def replacement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.ReplacementContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.ReplacementContext,i)


        def EXTEND(self):
            return self.getToken(MatchingLanguageParser.EXTEND, 0)

        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.ExtensionContext,i)


        def WHERE(self):
            return self.getToken(MatchingLanguageParser.WHERE, 0)

        def prop(self):
            return self.getTypedRuleContext(MatchingLanguageParser.PropContext,0)


        def object_(self):
            return self.getTypedRuleContext(MatchingLanguageParser.ObjectContext,0)


        def getRuleIndex(self):
            return MatchingLanguageParser.RULE_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRule" ):
                listener.enterRule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRule" ):
                listener.exitRule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule" ):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)




    def rule_(self):

        localctx = MatchingLanguageParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 53
                self.match(MatchingLanguageParser.NESTED)


            self.state = 56
            self.match(MatchingLanguageParser.MATCHING)
            self.state = 57
            localctx.query = self.match_multiobj()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 58
                self.match(MatchingLanguageParser.REPLACE)
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 59
                        self.replacement()
                        self.state = 60
                        self.match(MatchingLanguageParser.T__1) 
                    self.state = 66
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 67
                self.replacement()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 70
                self.match(MatchingLanguageParser.EXTEND)
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 71
                        self.extension()
                        self.state = 72
                        self.match(MatchingLanguageParser.T__1) 
                    self.state = 78
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 79
                self.extension()


            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 82
                self.match(MatchingLanguageParser.WHERE)
                self.state = 83
                self.prop(0)


            self.state = 86
            self.match(MatchingLanguageParser.AS)
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 87
                localctx.rewriting = self.object_()
                pass

            elif la_ == 2:
                self.state = 88
                self.variable()
                pass

            elif la_ == 3:
                self.state = 89
                self.jpath()
                pass

            elif la_ == 4:
                self.state = 90
                self.rewrite_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Match_multiobjContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def object_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.ObjectContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.ObjectContext,i)


        def getRuleIndex(self):
            return MatchingLanguageParser.RULE_match_multiobj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatch_multiobj" ):
                listener.enterMatch_multiobj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatch_multiobj" ):
                listener.exitMatch_multiobj(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatch_multiobj" ):
                return visitor.visitMatch_multiobj(self)
            else:
                return visitor.visitChildren(self)




    def match_multiobj(self):

        localctx = MatchingLanguageParser.Match_multiobjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_match_multiobj)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.object_()
                    self.state = 94
                    self.match(MatchingLanguageParser.T__1) 
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

            self.state = 101
            self.object_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PropContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MatchingLanguageParser.RULE_prop

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class P_jpathContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def jpath(self):
            return self.getTypedRuleContext(MatchingLanguageParser.JpathContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_jpath" ):
                listener.enterP_jpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_jpath" ):
                listener.exitP_jpath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_jpath" ):
                return visitor.visitP_jpath(self)
            else:
                return visitor.visitChildren(self)


    class P_ltContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def LT(self):
            return self.getToken(MatchingLanguageParser.LT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_lt" ):
                listener.enterP_lt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_lt" ):
                listener.exitP_lt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_lt" ):
                return visitor.visitP_lt(self)
            else:
                return visitor.visitChildren(self)


    class P_parContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAR(self):
            return self.getToken(MatchingLanguageParser.LPAR, 0)
        def prop(self):
            return self.getTypedRuleContext(MatchingLanguageParser.PropContext,0)

        def RPAR(self):
            return self.getToken(MatchingLanguageParser.RPAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_par" ):
                listener.enterP_par(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_par" ):
                listener.exitP_par(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_par" ):
                return visitor.visitP_par(self)
            else:
                return visitor.visitChildren(self)


    class P_implContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def IMPL(self):
            return self.getToken(MatchingLanguageParser.IMPL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_impl" ):
                listener.enterP_impl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_impl" ):
                listener.exitP_impl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_impl" ):
                return visitor.visitP_impl(self)
            else:
                return visitor.visitChildren(self)


    class P_orContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def OR(self):
            return self.getToken(MatchingLanguageParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_or" ):
                listener.enterP_or(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_or" ):
                listener.exitP_or(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_or" ):
                return visitor.visitP_or(self)
            else:
                return visitor.visitChildren(self)


    class P_gtContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def GT(self):
            return self.getToken(MatchingLanguageParser.GT, 0)
        def ISIN(self):
            return self.getToken(MatchingLanguageParser.ISIN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_gt" ):
                listener.enterP_gt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_gt" ):
                listener.exitP_gt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_gt" ):
                return visitor.visitP_gt(self)
            else:
                return visitor.visitChildren(self)


    class P_callContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CALL(self):
            return self.getToken(MatchingLanguageParser.CALL, 0)
        def STRING(self):
            return self.getToken(MatchingLanguageParser.STRING, 0)
        def WITH(self):
            return self.getToken(MatchingLanguageParser.WITH, 0)
        def funarg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.FunargContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.FunargContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_call" ):
                listener.enterP_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_call" ):
                listener.exitP_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_call" ):
                return visitor.visitP_call(self)
            else:
                return visitor.visitChildren(self)


    class P_varContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(MatchingLanguageParser.VariableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_var" ):
                listener.enterP_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_var" ):
                listener.exitP_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_var" ):
                return visitor.visitP_var(self)
            else:
                return visitor.visitChildren(self)


    class P_eqContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def EQ(self):
            return self.getToken(MatchingLanguageParser.EQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_eq" ):
                listener.enterP_eq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_eq" ):
                listener.exitP_eq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_eq" ):
                return visitor.visitP_eq(self)
            else:
                return visitor.visitChildren(self)


    class P_notContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(MatchingLanguageParser.NOT, 0)
        def prop(self):
            return self.getTypedRuleContext(MatchingLanguageParser.PropContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_not" ):
                listener.enterP_not(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_not" ):
                listener.exitP_not(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_not" ):
                return visitor.visitP_not(self)
            else:
                return visitor.visitChildren(self)


    class P_geqContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def GEQ(self):
            return self.getToken(MatchingLanguageParser.GEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_geq" ):
                listener.enterP_geq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_geq" ):
                listener.exitP_geq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_geq" ):
                return visitor.visitP_geq(self)
            else:
                return visitor.visitChildren(self)


    class P_isemptyContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self):
            return self.getTypedRuleContext(MatchingLanguageParser.PropContext,0)

        def EQ(self):
            return self.getToken(MatchingLanguageParser.EQ, 0)
        def EMPTY(self):
            return self.getToken(MatchingLanguageParser.EMPTY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_isempty" ):
                listener.enterP_isempty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_isempty" ):
                listener.exitP_isempty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_isempty" ):
                return visitor.visitP_isempty(self)
            else:
                return visitor.visitChildren(self)


    class P_jsonContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PYTHON(self):
            return self.getToken(MatchingLanguageParser.PYTHON, 0)
        def STRING(self):
            return self.getToken(MatchingLanguageParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_json" ):
                listener.enterP_json(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_json" ):
                listener.exitP_json(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_json" ):
                return visitor.visitP_json(self)
            else:
                return visitor.visitChildren(self)


    class P_neqContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def NEQ(self):
            return self.getToken(MatchingLanguageParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_neq" ):
                listener.enterP_neq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_neq" ):
                listener.exitP_neq(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_neq" ):
                return visitor.visitP_neq(self)
            else:
                return visitor.visitChildren(self)


    class P_andContext(PropContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatchingLanguageParser.PropContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def prop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatchingLanguageParser.PropContext)
            else:
                return self.getTypedRuleContext(MatchingLanguageParser.PropContext,i)

        def AND(self):
            return self.getToken(MatchingLanguageParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_and" ):
                listener.enterP_and(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_and" ):
                listener.exitP_and(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_and" ):
                return visitor.visitP_and(self)
            else:
                return visitor.visitChildren(self)


    class P_leqContext(PropContext):
